@@ -20,18 +20,22 @@ struct regex_entry {
 	struct list_head int_list;
 };
 
+
+
 static char *trim(char *str)
 {
 	char *ibuf, *obuf;
 
-	if (NULL == str)
+	if ( ! str )
 		return NULL;
 
-	for (ibuf = str, obuf = str; *ibuf;) {
-		while (*ibuf && (isspace(*ibuf)))
+	for ( ibuf = str, obuf = str; *ibuf; ) {
+		while ( *ibuf && isspace(*ibuf) )
 			ibuf++;
-		if (*ibuf && (obuf != str))
+                
+		if ( *ibuf && (obuf != str) )
 			*(obuf++) = ' ';
+                
 		while (*ibuf && (!isspace(*ibuf)))
 			*(obuf++) = *(ibuf++);
 	}
@@ -40,30 +44,45 @@ static char *trim(char *str)
 	return str;
 }
 
-inline static regex_entry_t *regex_entry_new(regex_list_t * list)
+
+
+
+static regex_entry_t *regex_entry_new(regex_list_t *list)
 {
-	regex_entry_t *new_entry = malloc(sizeof(*new_entry));
-	assert(new_entry);
+	regex_entry_t *new;
 
-	new_entry->regex_compiled = NULL;
-	new_entry->regex_extra = NULL;
-	new_entry->options = 0;
-	new_entry->name = NULL;
+        new = malloc(sizeof(*new));
+	if ( ! new ) {
+                log(LOG_ERR, "memory exhausted.\n");
+                return NULL;
+        }
 
-	list_add_tail(&new_entry->int_list, list);
+	new->regex_compiled = NULL;
+	new->regex_extra = NULL;
+	new->options = 0;
+	new->name = NULL;
 
-	return new_entry;
+	list_add_tail(&new->int_list, list);
+
+	return new;
 }
 
-inline static void regex_entry_delete(regex_entry_t * entry)
+
+
+
+static void regex_entry_delete(regex_entry_t *entry)
 {
 	list_del(&entry->int_list);
-
+        
 	pcre_free(entry->regex_compiled);
 	pcre_free(entry->regex_extra);
-	free(entry->name);
+
+        free(entry->name);
 	free(entry);
 }
+
+
+
 
 regex_list_t *regex_init(char *filename)
 {
@@ -122,29 +141,24 @@ regex_list_t *regex_init(char *filename)
 			regex_entry_t *entry;
 			pcre *compiled;
 
-			compiled =
-			    pcre_compile(regex, 0, &errptr, &erroffset,
-					 NULL);
+			compiled =  pcre_compile(regex, 0, &errptr, &erroffset, NULL);
 			if (NULL == compiled) {
-				log(LOG_WARNING,
-				    "%s:%d : unable to compile: %s\n",
+				log(LOG_WARNING, "%s:%d : unable to compile: %s\n",
 				    filename, line, errptr);
 				continue;
 			}
+                        
 			entry = regex_entry_new(conf);
 			entry->name = strdup(name);
 			entry->regex_compiled = compiled;
-			entry->regex_extra =
-			    pcre_study(entry->regex_compiled, 0, &errptr);
+			entry->regex_extra = pcre_study(entry->regex_compiled, 0, &errptr);
 
 			/*
 			 * TBD: take care of options field
 			 */
 
-			dprint
-			    ("[REGEX] rule found: plugin: %s - pattern: %s - options: %s\n",
-			     name, regex, options);
-
+			dprint("[REGEX] rule found: plugin: %s - pattern: %s - options: %s\n",
+                               name, regex, options);
 		}
 		line++;
 	}
@@ -152,43 +166,45 @@ regex_list_t *regex_init(char *filename)
 	return conf;
 }
 
-void regex_destroy(regex_list_t * list)
-{
-	struct list_head *tmp;
-	regex_entry_t *entry;
 
-	list_for_each(tmp, list) {
+
+
+void regex_destroy(regex_list_t *list)
+{
+        regex_entry_t *entry;
+	struct list_head *tmp, *bkp;
+
+	list_for_each_safe(tmp, bkp, list) {
 		entry = list_entry(tmp, regex_entry_t, int_list);
 		regex_entry_delete(entry);
 	}
+        
 	free(list);
 }
 
-int
-regex_exec(regex_list_t * list, char *str, char **plugins, int maxcount)
+
+
+
+int regex_exec(regex_list_t *list, const char *str,
+               void (*cb)(const char *name, void *data), void *data)
 {
+        regex_entry_t *entry;
 	struct list_head *tmp;
-	regex_entry_t *entry;
-	int n = 0;
-
+        int count, ovector[20 * 3];
+        
 	list_for_each(tmp, list) {
-#define N 20 + 1
-		int count;
-		int ovector[20 * 3];
-		entry = list_entry(tmp, regex_entry_t, int_list);
+                entry = list_entry(tmp, regex_entry_t, int_list);
 
-		count =
-		    pcre_exec(entry->regex_compiled, entry->regex_extra,
-			      str, strlen(str), 0, 0, ovector, 20 * 3);
-		if (count > 0) {
-			dprint
-			    ("[REGEX] string <%s> matched - count = %d - plugin: %s\n",
-			     str, count, entry->name);
-			plugins[n++] = entry->name;
-		}
+		count = pcre_exec(entry->regex_compiled, entry->regex_extra,
+                                  str, strlen(str), 0, 0, ovector, 20 * 3);
+                if ( count <= 0 )
+                        continue;
+                
+                dprint("[REGEX] string <%s> matched - count = %d - plugin: %s\n",
+                       str, count, entry->name);
 
-		if (n == maxcount)
-			return n;
+                cb(entry->name, data);
 	}
-	return n;
+        
+	return 0;
 }
